# uisurf-app

./: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile.api  README.md  aicommit.py  pyproject.toml  run-dev.sh
code/: adk_agent_def_
scripts/: create_test_user.py
src/uisurf_app/: __init__.py  main.py
src/uisurf_app/api/: router.py
src/uisurf_app/core/: __init__.py  adk_agent_def.py  adk_live_session.py  adk_session_service.py  config.py  firebase.py  live_session.py  security.py
src/uisurf_app/schemas/: __init__.py  auth.py  chat.py  live_session.py  messages.py  multimodal.py  prompt.py  remote_session.py
src/uisurf_app/services/: __init__.py  chat_service.py  chat_vnc_session_service.py  prompt_refine_service.py  remote_session_service.py  ui_agent_session_service.py  websocket_ticket_service.py
src/uisurf_app/utils/: __init__.py  misc_utils.py  ws_utils.py
ui/: .env.local.sample  Dockerfile  middleware.ts  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/auth/: login-form.tsx
ui/components/chat/: agent-activity-card.tsx  approval-alert.tsx  chat-history.tsx  chat-input.tsx  chat-message.tsx  chat-sidebar.tsx  chat-toolbox.tsx  chat.tsx  markdown-message.tsx
ui/components/layout/: providers.tsx  top-bar.tsx  workspace-shell.tsx
ui/hooks/: use-access-token.ts  use-chat-sessions.ts  use-remote-session.ts
ui/lib/: api.ts  auth.config.ts  auth.ts  env.client.ts  env.server.ts  theme.ts  validators.ts
ui/store/: chat-store.ts  message-store.ts  vnc-store.ts
ui/types/: api.ts  live-session.ts  next-auth.d.ts
(+15 files in other folders)
